# synergy-bots

./: .gitignore  README.md  pyproject.toml
src/: app.py  main.py  train.py
src/core/: __init__.py  orchestrator_maac.py  orchestrator_mappo.py
src/game/: block.py  clear_mark.py  game.py  robot.py
src/memory/: __init__.py  replay_buffer.py  rollout_storage.py
src/models/: __init__.py  maac_nn.py  mappo_nn.py
src/utils/: __init__.py  config.py  logger.py
