[project]
name = "synergy-bots"
version = "0.1.0"
description = "Multi-agent vacuum cleaner robots trained with MAPPO"
requires-python = ">=3.10"

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "streamlit>=1.35.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0",
]

[tool.black]
line-length = 130